1) created entity User

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ZadanieRekrutacyjne
+#Liquibase
+spring.liquibase.change-log=db/changelog/master.xml
+
+#Hibernate
+spring.datasource.url=jdbc:postgresql://localhost:34269/mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=secret
