1) added generating Jwt token feature

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
         <spring-boot-starter-security.version>3.2.4</spring-boot-starter-security.version>
+        <java-jwt.version>4.4.0</java-jwt.version>
     </properties>
     <dependencies>
         <dependency>
@@ -105,6 +106,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>${spring-boot-starter-security.version}</version>
+        </dependency>
+<!--        JWT-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${java-jwt.version}</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
