--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <spring-cloud.version>2023.0.1</spring-cloud.version>
         <spring-boot-starter-security.version>3.2.4</spring-boot-starter-security.version>
         <java-jwt.version>4.4.0</java-jwt.version>
+        <spring-boot-starter-validation.version>3.2.1</spring-boot-starter-validation.version>
     </properties>
     <dependencies>
         <dependency>
@@ -113,6 +114,14 @@
             <artifactId>java-jwt</artifactId>
             <version>${java-jwt.version}</version>
         </dependency>
+<!--        spring validation-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring-boot-starter-validation.version}</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
