little refactor od spring security module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.liquibase.change-log=db/changelog/master.xml
 spring.datasource.url=jdbc:postgresql://localhost:34269/mydatabase
 spring.datasource.username=myuser
 spring.datasource.password=secret
+
+#JWT
+auth.jwt.secret=${JWT_SECRET_KEY}
+auth.jwt.hours=1
